CertPage: Overflow bug fix, ProjectPage: Minor CSS Tweaks

--- a/public/components/AboutPage.css
+++ b/public/components/AboutPage.css
@@ -71,7 +71,7 @@ ul#icons {
   margin: 0;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 850px) {
   h1 {
     text-wrap-mode: nowrap;
   }
